--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
         "redis" : ">=0.6.0"
     },
     "devDependencies" : {
-        "nomnom" : ">=0.4.2",
+        "nomnom" : "0.4.2",
         "cradle" : ">=0.2.5",
         "connect" : ">=1.4.0",
-        "uglify-js" : ">=1.0.1",
-        "colors" : ">=0.5.0",
-        "browserify" : ">=0.4.1"
+        "uglify-js" : "1.0.1",
+        "colors" : "0.5.0",
+        "browserify" : "0.4.1"
     },
     "main": "./lib/brain"
 }
